# weight-ml

./: .gitignore  .gitlab-ci.yml  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
dashboard/: app.py
docker/: Dockerfile.api  Dockerfile.dashboard  prometheus.yml
k8s/: api-deployment.yaml  dashboard-deployment.yaml
notes/: weight3.ipynb  weight_1.ipynb  weight_2.ipynb
scripts/: kill_ports.sh
src/api/: main.py
src/data/: loader.py
src/models/: predictor.py  trainer.py
tests/: test_loader.py  test_predictor.py
