[project]
name = "weight"
version = "0.1.0"
description = "Weight prediction ML service — portfolio project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pandas<3",
    "scikit-learn>=1.8.0",
    "xgboost>=3.2.0",
    "mlflow>=2.15.0",
    "streamlit>=1.40.0",
    "prometheus-client>=0.21.0",
    "openpyxl>=3.1.5",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
